[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/scripts/Ply_UI.gd" type="Script" id=1]
[ext_resource path="res://assets/gfx/title_icon.png" type="Texture" id=2]
[ext_resource path="res://assets/gfx/healthbar_bg.png" type="Texture" id=3]
[ext_resource path="res://assets/gfx/healthbar_fill.png" type="Texture" id=4]

[node name="Ply_UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -640.0
margin_bottom = -360.0
script = ExtResource( 1 )

[node name="Start" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Start_Menu" type="VBoxContainer" parent="Start"]
margin_left = 192.0
margin_top = 40.0
margin_right = 448.0
margin_bottom = 320.0

[node name="Title_Icon" type="TextureRect" parent="Start/Start_Menu"]
margin_right = 256.0
margin_bottom = 256.0
texture = ExtResource( 2 )

[node name="Start_Button" type="Button" parent="Start/Start_Menu"]
margin_top = 260.0
margin_right = 256.0
margin_bottom = 280.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Start"

[node name="Ply" type="HBoxContainer" parent="."]
visible = false
margin_right = 161.0
margin_bottom = 18.0

[node name="Health_Label" type="Label" parent="Ply"]
margin_top = 2.0
margin_right = 22.0
margin_bottom = 16.0
text = "HP:"

[node name="Health_Bar" type="TextureProgress" parent="Ply"]
margin_left = 26.0
margin_right = 161.0
margin_bottom = 18.0
size_flags_horizontal = 3
size_flags_vertical = 3
value = 25.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )

[node name="End" type="CenterContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="End_Menu" type="VBoxContainer" parent="End"]
margin_left = 281.0
margin_top = 161.0
margin_right = 358.0
margin_bottom = 199.0

[node name="GameOver_Label" type="Label" parent="End/End_Menu"]
margin_right = 77.0
margin_bottom = 14.0
text = "Game Over!"
align = 1

[node name="Retry_Button" type="Button" parent="End/End_Menu"]
margin_top = 18.0
margin_right = 77.0
margin_bottom = 38.0
size_flags_horizontal = 7
size_flags_vertical = 3
text = "Retry"

[node name="Sarcasm_Timer" type="Timer" parent="End/End_Menu"]
one_shot = true

[node name="Sarcasm_Label" type="Label" parent="End/End_Menu"]
margin_top = 42.0
margin_right = 200.0
margin_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 200, 0 )
text = "\"\""
align = 1
autowrap = true
[connection signal="pressed" from="Start/Start_Menu/Start_Button" to="." method="_on_Start_Button_pressed"]
[connection signal="pressed" from="End/End_Menu/Retry_Button" to="." method="_on_Retry_Button_pressed"]
